item detail response исправления
