# docs/swagger.json
@@ -263,7 +263,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ItemResponse"
+                            "$ref": "#/definitions/handler.ItemDetailResponse"
                         }
                     },
                     "401": {
@@ -430,6 +430,20 @@
             }
         },
         "handler.CreateItemRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ItemDetailResponse": {
             "type": "object",
             "properties": {
                 "description": {
